# djangoFW

./: .env_example  README.md  habit_data.json  pyproject.toml  users_data.json
config/: settings.py  urls.py
habit/: models.py  paginations.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habit/migrations/: 0001_initial.py  0002_alter_habit_options_habit_action_and_more.py  0003_alter_habit_time.py  0004_habit_last_try.py
users/: models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_alter_user_tg_nick.py
