[tool.poetry]
name = "djangofw"
version = "0.1.0"
description = "kw7.drf"
authors = ["max"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
django = "4.2"
psycopg2 = "^2.9.9"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
